Now we have kafka
